Fixing several alignment and overlap issues noticable on smaller devices. Changing how containers were aligned and removing no longer needed elements. Fixing an issue where the navbar logo was visible when it shouldn't be.

--- a/public/css/additional.less
+++ b/public/css/additional.less
@@ -36,7 +36,9 @@ ul.uk-navbar-nav li a:hover {
 	background: @pal-3;
 	height:200px;
 }
-
+.ud-banner {
+	padding: 0px;
+}
 /* Jquery Cycle2 Slideshow */
 .ud-slideshow-bg {
 	background: #0D1C33;
